; ModuleID = '/home/carl/AnghaBench/vlc/modules/hw/vdpau/extr_adjust.c_vlc_to_vdp_contrast.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/hw/vdpau/extr_adjust.c_vlc_to_vdp_contrast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float)* @vlc_to_vdp_contrast to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @vlc_to_vdp_contrast(float %0) #0 {
  %2 = alloca float, align 4
  store float %0, float* %2, align 4
  %3 = load float, float* %2, align 4
  %4 = fcmp ogt float %3, 1.000000e+01
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  store float 1.000000e+01, float* %2, align 4
  br label %6

6:                                                ; preds = %5, %1
  %7 = load float, float* %2, align 4
  %8 = fcmp olt float %7, 0.000000e+00
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  store float 0.000000e+00, float* %2, align 4
  br label %10

10:                                               ; preds = %9, %6
  %11 = load float, float* %2, align 4
  ret float %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
